# pretix

./: .clabot  .codecov.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .landscape.yaml  .licenseheader  .readthedocs.requirements.txt  .readthedocs.yaml  .travis.sh  .travis.yml  AUDIT_REPORT.md  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  README_kr.md  SECURITY.md  TODO.EASY  br.txt  docker-compose.yml  eslint.config.mjs  local_install.sh  package-lock.json  package.json  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  shell.nix  sonar-project.properties  tsconfig.json  (+2 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: build.yml  django.yml  docs.yml  mutation.yml  qa.yml  sbom.yml  strings.yml  style-js.yml  style.yml  tests.yml  validation.yml
contracts/: pretix_event.yaml
deployment/docker/: docker-compose.yml  nginx-max-body-size.conf  nginx.conf  pretix.bash  pretix.cfg  production_settings.py  supervisord.all.conf  supervisord.conf  supervisord.web.conf
deployment/docker-compose/: .gitignore  Dockerfile  README.md  docker-compose.yml  run.sh
doc/: Makefile  checkin_filter.py  conf.py  contents.rst  index.rst  make.bat  opendqv-integration.md  requirements.rtd.txt  requirements.txt  spelling_wordlist.txt
doc/_templates/: index.html
doc/admin/: config.rst  errors.rst  index.rst  indexes.rst  installation.rst  maintainance.rst  mysql2postgres.rst  scaling.rst  sso.rst  updates.rst
doc/api/: auth.rst  deviceauth.rst  fundamentals.rst  index.rst  oauth.rst  ratelimit.rst  tokenauth.rst  webhooks.rst
doc/development/: concepts.rst  goals.rst  index.rst  models.rst  setup.rst  structure.rst  style.rst  urlconfig.rst
doc/images/: cart_pricing.puml  checkin_offline.puml  checkin_online.puml  order_objects.puml  order_states.puml  ticket_layouts.puml
doc/license/: faq.rst
doc/plugins/: badges.rst  banktransfer.rst  campaigns.rst  certificates.rst  digital.rst  epaybl.rst  exhibitors.rst  getyourguide.rst  imported_secrets.rst  index.rst  kulturpass.rst  list.rst  presale-saml.rst  pretixdroid.rst  shipping.rst  ticketoutputpdf.rst  webinar.rst
doc/storefrontapi/: fundamentals.rst  index.rst
doc/user/: android-version-support.rst  faq.rst  glossary.rst  index.rst  markdown.rst
docs/reviews/: PR-event-creation-self-review.md  PR-login-self-review.md  PR-organizer-self-review.md
pretix-sideburn-lottery/: LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
pretix-sideburn-lottery/.github/workflows/: style.yml  tests.yml
pretix-sideburn-lottery/pretix_sideburn_lottery/: apps.py  signals.py  urls.py
pretix-sideburn-lottery/pretix_sideburn_lottery/services/: __init__.py  lottery.py  presale.py  rank.py  waitinglist.py
pretix-sideburn-lottery/pretix_sideburn_lottery/static/pretix_sideburn_lottery/js/: waitinglist_lottery.js
pretix-sideburn-lottery/pretix_sideburn_lottery/templates/pretix_sideburn_lottery/: waitinglist.html
pretix-sideburn-lottery/pretix_sideburn_lottery/templates/pretix_sideburn_lottery/fragment/: checkout_waiver.html  sold_out_availability.html  waitinglist_lottery_actions.html  waitinglist_rank.html
pretix-sideburn-lottery/pretix_sideburn_lottery/templatetags/: ordinal.py
pretix-sideburn-lottery/pretix_sideburn_lottery/views/: __init__.py  control.py  presale.py
pretix-sideburn-lottery/tests/: conftest.py  test_admin_lottery.py  test_behavior.py  test_main.py  test_presale_copy.py  test_presale_rank.py  test_rank.py
pretix-sideburn-twilio/: .gitignore  .gitlab-ci.yml  .install-hooks.sh  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  submit-twilio-tfv.ps1
pretix-sideburn-twilio/.github/workflows/: style.yml  tests.yml
pretix-sideburn-twilio/pretix_twilio_sms/: apps.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
pretix-sideburn-twilio/pretix_twilio_sms/locale/de_Informal/LC_MESSAGES/: django.po
pretix-sideburn-twilio/pretix_twilio_sms/management/commands/: purge_old_sms_preferences.py
pretix-sideburn-twilio/pretix_twilio_sms/migrations/: 0001_initial.py
pretix-sideburn-twilio/pretix_twilio_sms/templates/pretix_twilio_sms/: customer_profile.html
pretix-sideburn-twilio/pretix_twilio_sms/templates/pretix_twilio_sms/fragment/: customer_sms_status.html
pretix-sideburn-twilio/pretix_twilio_sms/templatetags/: pretix_twilio_sms_tags.py
pretix-sideburn-twilio/tests/: conftest.py  test_integration.py  test_main.py  test_purge_old_sms_preferences_command.py  test_twilio_webhook.py
src/: .coveragerc  .gitignore  .update-locales  .watchmanconfig  COPYRIGHT  DESIGN_TODO  MANIFEST.in  Makefile  dump_fixtures.py  make_testdata.py  manage.py  pytest.ini  requirements.txt  setup.cfg  setup.py
src/helpers/: lessabsolutefilter.py
src/pretix/: MANIFEST.in  __init__.py  __main__.py  _base_settings.py  _build.py  _build_settings.py  celery.py  celery_app.py  local_settings.py  sentry.py  settings.py  settings.py.orig  urls.py  wsgi.py
src/pretixbase/: admin.py  cache.py  middleware.py  models.py  signals.py  types.py
src/pretixcontrol/: middleware.py  permissions.py  signals.py  urls.py
src/pretixpresale/: middleware.py  urls.py
src/requirements/: banktransfer.txt  celery.txt  dev.txt  docs.txt  mysql.txt  paypal.txt  postgres.txt  production.txt  py33.txt  py34.txt  redis.txt  stripe.txt  testing.txt
src/tests/: .gitignore  __init__.py  conftest.py  const.py  settings.py  test_crashing.py  test_no_missing_migrations.py  test_startup.py  travis_mysql.cfg  travis_postgres.cfg
src/tixl/: settings.py  urls.py  wsgi.py
src/tixlbase/: admin.py  cache.py  forms.py  middleware.py  models.py  plugins.py  (+3 more)
tests/: test-create-event.py  test-event-details.py  test-events-search.py  test_email_notifications.py  test_event_capacity.py  test_event_creation.py  test_voucher_simple.py  ui_01.py  ui_02.py  ui_03.py
(+2941 files in other folders)
