[project]
name = "pretix"
dynamic = ["version"]
description = "Reinventing presales, one ticket at a time"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["tickets", "web", "shop", "ecommerce"]
authors = [
  {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
  {name = "pretix team", email = "support@pretix.eu"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Environment :: Web Environment",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Framework :: Django :: 4.1",
]

dependencies = [
  "arabic-reshaper==3.0.0",  # Support for Arabic in reportlab
  "babel",
  "BeautifulSoup4==4.12.*",
  "bleach==5.0.*",
  "celery==5.3.*",
  "chardet==5.1.*",
  "cryptography>=3.4.2",
  "css-inline==0.8.*",
  "defusedcsv>=1.1.0",
  "dj-static",
  "Django==4.1.*",
  "django-bootstrap3==23.1.*",
  "django-compressor==4.3.*",
  "django-countries==7.5.*",
  "django-filter==23.2",
  "django-formset-js-improved==0.5.0.3",
  "django-formtools==2.4.1",
  "django-hierarkey==1.1.*",
  "django-hijack==3.3.*",
  "django-i18nfield==1.9.*,>=1.9.4",
  "django-libsass==0.9",
  "django-localflavor==4.0",
  "django-markup",
  "django-oauth-toolkit==2.2.*",
  "django-otp==1.2.*",
  "django-phonenumber-field==7.1.*",
  "django-redis==5.2.*",
  "django-scopes==2.0.*",
  "django-statici18n==2.3.*",
  "djangorestframework==3.14.*",
  "dnspython==2.3.*",
  "drf_ujson2==1.7.*",
  "geoip2==4.*",
  "importlib_metadata==6.*",  # Polyfill, we can probably drop this once we require Python 3.10+
  "isoweek",
  "jsonschema",
  "kombu==5.3.*",
  "libsass==0.22.*",
  "lxml",
  "markdown==3.4.3",  # 3.3.5 requires importlib-metadata>=4.4, but django-bootstrap3 requires importlib-metadata<3.
  # We can upgrade markdown again once django-bootstrap3 upgrades or once we drop Python 3.6 and 3.7
  "mt-940==4.30.*",
  "oauthlib==3.2.*",
  "openpyxl==3.1.*",
  "packaging",
  "paypalrestsdk==1.13.*",
  "paypal-checkout-serversdk==1.0.*",
  "PyJWT==2.7.*",
  "phonenumberslite==8.13.*",
  "Pillow==9.5.*",
  "pretix-plugin-build",
  "protobuf==4.23.*",
  "psycopg2-binary",
  "pycountry",
  "pycparser==2.21",
  "pycryptodome==3.18.*",
  "pypdf==3.9.*",
  "python-bidi==0.4.*",  # Support for Arabic in reportlab
  "python-dateutil==2.8.*",
  "python-u2flib-server==4.*",
  "pytz",
  "pytz-deprecation-shim==0.1.*",
  "pyuca",
  "qrcode==7.4.*",
  "redis==4.5.*,>=4.5.4",
  "reportlab==4.0.*",
  "requests==2.31.*",
  "sentry-sdk==1.15.*",
  "sepaxml==2.6.*",
  "slimit",
  "static3==0.7.*",
  "stripe==5.4.*",
  "text-unidecode==1.*",
  "tlds>=2020041600",
  "tqdm==4.*",
  "vat_moss_forked==2020.3.20.0.11.0",
  "vobject==0.9.*",
  "webauthn==0.4.*",
  "zeep==4.2.*"
]

[project.optional-dependencies]
memcached = ["pylibmc"]
dev = [
  "coverage",
  "coveralls",
  "flake8==6.0.*",
  "freezegun",
  "isort==5.12.*",
  "pep8-naming==0.13.*",
  "potypo",
  "pycodestyle==2.10.*",
  "pyflakes==3.0.*",
  "pytest-cache",
  "pytest-cov",
  "pytest-django==4.*",
  "pytest-mock==3.10.*",
  "pytest-rerunfailures==11.*",
  "pytest-sugar",
  "pytest-xdist==3.3.*",
  "pytest==7.3.*",
  "responses",
]

[project.entry-points."distutils.commands"]
build = "pretix._build:CustomBuild"
build_ext = "pretix._build:CustomBuildExt"

[build-system]
build-backend = "backend"
backend-path = ["_build"]
requires = [
  "setuptools",
  "setuptools-rust",
  "wheel",
  "importlib_metadata",
  "tomli",
]

[project.urls]
homepage = "https://pretix.eu"
documentation = "https://docs.pretix.eu"
repository = "https://github.com/pretix/pretix.git"
changelog = "https://pretix.eu/about/en/blog/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pretix*"]
namespaces = false
