[project]
name = "pretix-sideburn-twilio"
dynamic = ["version"]
description = "A Sideburn-specific twilio integration for pretix"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Ryan", email = "rdn0613@hotmail.com"},
]
maintainers = [
    {name = "Ryan", email = "rdn0613@hotmail.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_twilio_sms = "pretix_twilio_sms:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "n/a"
repository = "n/a"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_twilio_sms.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
